--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.22.0",
-    "eslint-plugin-react": "^7.31.0",
-    "husky": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1"
+    "eslint-plugin-react": "^7.31.0",
+    "husky": "^8.0.1",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8"
   },
   "husky": {
     "hooks": {
