--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
   },
   "homepage": "https://github.com/Dochain1/frontend#readme",
   "dependencies": {
+    "@ethersproject/providers": "^5.7.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/metamask": "^8.0.0-beta.0",
+    "ethers": "^5.7.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "web3": "^1.7.5",
+    "web3-react": "^5.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
