--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web3": "^1.7.5",
-    "web3-react": "^5.0.5"
+    "web3-react": "^5.0.5",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
