--- a/package.json
+++ b/package.json
@@ -29,20 +29,17 @@
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "web3": "^1.7.5",
-    "web3-react": "^5.0.5",
-    "react-icons": "^4.4.0"
+    "web3-react": "^5.0.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.0",
     "husky": "^8.0.1",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.8"
+    "prettier": "^2.7.1"
   },
   "husky": {
     "hooks": {
