--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@ethersproject/providers": "^5.7.0",
+    "@metamask/eth-sig-util": "^4.0.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/metamask": "^8.0.0-beta.0",
+    "ethereumjs-utils": "^5.2.5",
     "ethers": "^5.7.0",
     "framer-motion": "^6.5.1",
     "next": "^12.2.5",
+    "openpgp": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
