--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/metamask": "^8.0.0-beta.0",
+    "axios": "^0.27.2",
     "ethereumjs-utils": "^5.2.5",
     "ethers": "^5.7.0",
     "framer-motion": "^6.5.1",
